三等奖  add  两次抽奖
三等奖增加两次抽奖，为了防止出错

--- a/三等奖.html
+++ b/三等奖.html
@@ -133,6 +133,9 @@
             {  name:'三等奖', size: 5 },
             {  name:'三等奖', size: 5 },
             {  name:'三等奖', size: 5 },
+                //增加两次抽奖
+            {  name:'三等奖', size: 5 },
+            {  name:'三等奖', size: 5 },
         ]
         //键盘事件
         document.onkeydown=function(event){
